examples/errors/fn_reassign.vut
fn add(a, b) {
  return a + b
}

add = 10
